nemo-guardrails/deployment-nemo-guardrails.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nemo-guardrails
  namespace: nemo-guardrails
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nemo-guardrails
  template:
    metadata:
      labels:
        app: nemo-guardrails
    spec:
      serviceAccountName: default
      containers:
        - name: nemo-guardrails
          image: quay.io/rh-ee-mmisiura/nemo-guardrails:models-endpoint
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: config-volume
              mountPath: /app/config/rails-custom-action
      volumes:
        - name: config-volume
          configMap:
            name: nemo-config
