nemo-guardrails/service-nemo-guardrails-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nemo-guardrails-service
  namespace: nemo-guardrails
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: nemo-guardrails
