nemo-guardrails/route-nemo-guardrails.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nemo-guardrails
  namespace: nemo-guardrails
spec:
  host: <NEMO_ROUTE_HOST>
  to:
    kind: Service
    name: nemo-guardrails-service
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
